2010-11-25  Andy Buckley  <andy@insectnation.org>

	* Cmp.hh: Adding ASC/DESC (and ANTISORTED) as preferred
	non-EQUIVALENT enum value synonyms over misleading
	SORTED/UNSORTED.

	* Change of rapidity scheme enum name to RapScheme

	* Reworking JetShape a bit further: constructor args now avoid
	inconsistencies (it was previously possible to define incompatible
	range-ends and interval). Internal binning implementation also
	reworked to use a vector of bin edges: the bin details are
	available via the interface. The general jet pT cuts can be
	applied via the JetShape constructor.

	* MathUtils.hh: Adding linspace and logspace utility
	functions. Useful for defining binnings.

	* Adding more general cuts on jet pT and (pseudo)rapidity.

2010-11-11  Andy Buckley  <andy@insectnation.org>

	* Adding special handling of FourMomentum::mass() for computed
	zero-mass vectors for which mass2 can go (very slightly) negative
	due to numerical precision.

2010-11-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-083 conference note. Data is read from plots.
	When I run Pythia 6 the bins close to pi/2 are higher than in the note,
	so I call this "unvalidated". But then ... the note doesn't specify
	a tune or even just a version for the generators in the plots. Not even
	if they used Pythia 6 or Pythia 8. Probably 6, since they mention AGILe.

2010-11-10  Andy Buckley  <andy@insectnation.org>

	* Adding a JetAlg::useInvisibles(bool) mechanism to allow ATLAS
	jet studies to include neutrinos. Anyone who chooses to use this
	mechanism had better be careful to remove hard neutrinos manually
	in the provided FinalState object.

2010-11-09  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-049 conference note. Data is read from plots.
	Fragmentation functions look good, but I can't reproduce the MC lines
	(or even the relative differences between them) in the jet cross-section
	plots. So consider those unvalidated for now. Oh, and it seems ATLAS